# learnopengl

./: .gitignore  CMakeLists.txt  CMakePresets.json  glad.c  hello_triangle.cpp  main.cpp  program_helpers.cpp  program_helpers.h  samples  shader_helpers.cpp  shader_helpers.h  shader_io.cpp  shader_io.h
dependencies/include/glad/: glad.h
include/: data_structures.h  glfw_callbacks.h  shader.h  shader_helpers.h  shader_io.h
shaders/: frag_1.glsl
src/1-HelloWindow/: hello_window.cpp
src/2-HelloTriangle/: hello_triangle.cpp  hello_triangle_frag.glsl
src/3-Shaders/: shaders.cpp  shaders_frag.glsl  shaders_vert.glsl
src/InteractiveCG/Project2/: description.txt
src/core/: glfw_callbacks.cpp  program_helpers.cpp  program_helpers.h  shader.cpp  shader_helpers.cpp  shader_io.cpp
